# zett

./: .gitattributes  .gitignore  README.md  eval.py  p.sh  requirements.txt  run_pod.sh  setup.py  train.py
artifacts/: 26l.txt  30l.txt  code.txt  en+code.txt
configs/baseline/: v7:mistral7b_code_original.json  v7:mistral7b_code_starcoder_from_focus.json  v7:mistral7b_en_gpt2_from_focus.json  v7:mistral7b_en_original.json  v7:tinyllama_code_original.json  v7:tinyllama_code_starcoder_from_focus.json  v7:tinyllama_en_gpt2_from_focus.json  v7:tinyllama_en_original.json
configs/nshot/: mistral7b_gpt2_full_ft.json  mistral7b_gpt2_full_ft_no_packing.json  mistral7b_starcoder_full_ft.json  mistral7b_starcoder_full_ft_lr1e-6.json  (+5 more)
data/: madlad400_metadata.csv  prepare.py  prepare_code.py  prepare_flan.py
experiments/: eval_english.sh  eval_multilingual_mistral.sh  evaluate_xlmr_adapters.sh  train_xlmr_adapters.sh  transfer_xlmr.sh
hf_hypernet/: configuration_hypernet.py  modeling_hypernet.py
rust_utils/: Cargo.toml  pyproject.toml  tpu_build.sh
rust_utils/src/: lib.rs
scripts/: apply_to_ft.py  combine.sh  combine_checkpoint.py  convert_to_pt.py  download_multilingual_data.sh  gcsfuse.sh  get_sampled_tokenizer.py  make_large_tokenizers.sh  make_spm.py  make_tokenizers.sh  run.slurm  transfer.py  transfer.sh  transfer_focus.py  transfer_lexical.py  transfer_ofa.py  transfer_passthrough.py  unigramify.py  unigramify.sh  update_tpu_ips.sh  upload_multilingual_data.sh
zett/: collator.py  compute_prior.py  dataset.py  tokenizer_converters.py  utils.py
(+42 files in other folders)
