[package]
name = "rust_utils"
version = "0.14.1-dev.0"
edition = "2021"

[lib]
name = "rust_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19" }
onig = { version = "6.0", default-features = false }
rand = "0.8"
rand_distr = "0.4.3"

[dependencies.tokenizers]
version = "0.14.0"
default-features = false
features = ["onig"]

[dev-dependencies]
tempfile = "3.1"
pyo3 = { version = "0.19", features = ["auto-initialize"] }

[features]
defaut = ["pyo3/extension-module"]
